manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "akscn01-bdef"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "akscn01-bdef"
  template:
    metadata:
      labels:
        app: "akscn01-bdef"
    spec:
      containers:
        - name: "akscn01-bdef"
          image: "acams.azurecr.io/akscn01"
          ports:
          - containerPort: 5000
