manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "akscn01-bdef"
    labels:
        app: "akscn01-bdef"
spec:
    type: ClusterIP
    ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
      name: http
    selector:
        app: "akscn01-bdef"
