manifests/Ingress-taacspyone.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: akscn01-bdef-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /onemsdev
        pathType: Prefix
        backend:
          service:
            name: akscn01-bdef
            port:
              number: 80
